--- a/web_gui_api/src/components/Footer/Footer.css
+++ b/web_gui_api/src/components/Footer/Footer.css
@@ -1,4 +1,7 @@
 footer {
+  border-top: 2px solid white;
+  position: sticky;
+  bottom: 0;
   background-color: #333;
   color: white;
   text-align: center;
