--- a/web_gui_api/src/components/Header/Header.css
+++ b/web_gui_api/src/components/Header/Header.css
@@ -1,6 +1,10 @@
-header {
+.header_class {
+  border-bottom: 2px solid white;
+  position: sticky;
+  top: 0;
   background-color: #333;
   color: white;
   text-align: center;
   padding: 1rem;
+  z-index: 1;
 }
